[build-system]
requires = ["setuptools>=78.1.1", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dojo-messaging"
dynamic = ["version"]
description = "Messaging utilities for dojo applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jarvis8x7b", email = "jarvis@tensorplex.ai" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["messaging", "dojo", "async"]
dependencies = [
  "aiohttp~=3.10.11",
  "httpx~=0.27.0",
  "loguru~=0.7.2",
  "orjson~=3.10.16",
  "pydantic~=2.8.2",
  "python-dotenv",
  "tenacity~=8.5.0",
  "uvicorn~=0.22.0",
  "zstandard~=0.23.0",
  "kami-client>=1.1.1",
]

[project.urls]
"Homepage" = "https://github.com/pypa/dojo-messaging"
"Bug Reports" = "https://github.com/tensorplex-labs/dojo-messaging/issues"
"Source" = "https://github.com/tensorplex-labs/dojo-messaging"

[project.optional-dependencies]
dev = ["pylint", "ruff", "pyright"]

[tool.setuptools.packages.find]
where = ["."]
include = ["messaging*"]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"
tag_regex = "^v?(?P<scm_version>\\d+\\.\\d+\\.\\d+(?:-\\w+\\.\\d+)?)"
